Fix cut off last display (and timetable not taking up full height) Set min-height to 100% and use padding-top instead of margin-top in order to not have any content in the vertical overflow and therefore cutoff.
fixes #1345

--- a/imports/ui/pages/timetable/timetable.scss
+++ b/imports/ui/pages/timetable/timetable.scss
@@ -1,6 +1,7 @@
 .timetable {
-	margin-top: 5px;
+	padding-top: 5px;
 	overflow: hidden;
+	min-height: 100%;
 }
 
 .timetable-header {
